## GeoTag 4.10

### New Feature

* Add preference item to preserve the original image file
  modification time when updating GeoLocation data.

* Add "Discard tracks" under the File menu. All tracks are cleared from the map.

* Allow paste into change timestamp and update location windows.

* Paste into images when not using the Update Location window now has a new
  format.  The format is "lat | lon" where lat and lon may be one of the
  following formats.

  -dd.dddd R            Coordinate in degrees
  -dd mm.mmmm R         Coordinate in degrees and minutes
  -dd mm ss.ssss R      Coordinate in degrees, minutes, and seconds

  S latitudes and W longitudes can be indicated by a negative number
  of degrees or the appropriate reference (R) value.  It is an error if both
  are used.  Degree (°), Minute ('), and Second (") marks are optional
  and ignored if found at the end of a value.

* Update to exiftool 12.12

* Compiled to also run on Apple Silicon 

## GeoTag 4.9

### New Feature

* mark files that could not be backed up or updated.
  files in red could not be updated by exiftool
  files in orange could not be saved in the backup folder

* new right-click menu option -- Show in Finder

* new preference -- change the width of tracks.

### Bug Fix

* Update existing track color (and width) when the preference changes.

## GeoTag 4.8

### New Feature

* update CreateDate as well as Date/Time Original.  Dates are updated only
  when the user modifies the image timestamp.

* Warn the user if the Backup/Save folder contains more than 500 MB of images
  or if the images were added to the folder more than 7 days ago.
  
* gray out png files.  Exiftool can handle metadata in PNG files but
  finder/macOS can't.
  
* update exiftool to version 11.91

### Bug Fix

* Remember the column/sort direction when a user picls a column to order the
  images in the table. Sort by the remembered value when new images are
  opened.

* update the script use to build a release dmg
